# media-engine

./: .gitignore  API.md  CLAUDE.md  Dockerfile  Dockerfile.cuda  Dockerfile.mlx  MANIFEST.in  Makefile  README.md  docker-compose.yml  polybos-media-archive-spec-v2.md  polybos-media-engine-phases.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli/: clip.py  faces.py  metadata.py  motion.py  objects.py  ocr.py  scenes.py  telemetry.py  transcript.py
demo/: index.html  run.sh  server.py
docs/: MULTICHANNEL_SPEAKER_ID.md
media_engine/: __init__.py  app.py  cli.py  config.py  main.py  schemas.py
media_engine/batch/: __init__.py  models.py  processor.py  queue.py  state.py  timing.py
media_engine/extractors/: __init__.py  clip.py  faces.py  frame_buffer.py  frames.py  motion.py  objects.py  objects_qwen.py  ocr.py  scenes.py  shot_type.py  telemetry.py  transcribe.py  translate.py  vad.py
media_engine/extractors/metadata/: __init__.py  apple.py  arri.py  avchd.py  avchd_gps.py  base.py  blackmagic.py  camera_360.py  canon.py  dji.py  dv.py  ffmpeg.py  generic.py  gopro.py  red.py  registry.py  sony.py  tesla.py
media_engine/routers/: __init__.py  batch.py  health.py  models.py  settings.py  utils.py
media_engine/utils/: __init__.py  logging.py  memory.py
polybos_engine/: __init__.py  app.py  config.py  main.py  schemas.py
polybos_engine/batch/: __init__.py  models.py  processor.py  queue.py  state.py  timing.py
polybos_engine/extractors/: __init__.py  clip.py  faces.py  frame_buffer.py  frames.py  geocoding.py  metadata.py  motion.py  objects.py  objects_qwen.py  ocr.py  scenes.py  shot_type.py  telemetry.py  transcribe.py  translate.py  vad.py
polybos_engine/extractors/metadata/: __init__.py  apple.py  arri.py  avchd.py  avchd_gps.py  base.py  blackmagic.py  camera_360.py  canon.py  dji.py  dv.py  ffmpeg.py  generic.py  gopro.py  insta360.py  red.py  registry.py  sony.py  tesla.py
polybos_engine/routers/: __init__.py  batch.py  health.py  models.py  settings.py  utils.py
polybos_engine/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  stress_test.py  test_api.py  test_batch_api.py  test_clip.py  test_dependencies.py  test_faces.py  test_memory.py  test_metadata.py  test_model_lifecycle.py  test_objects.py  test_ocr.py  test_scenes.py  test_transcribe.py
