[project]
name = "polybos-media-engine"
version = "0.1.0"
description = "AI-powered video extraction API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "scenedetect[opencv]>=0.6.0",
    "deepface>=0.0.79",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "webrtcvad>=2.0.10",
    "psutil>=5.9.0",
    "langdetect>=1.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
cuda = [
    "faster-whisper>=0.10.0",
    "open-clip-torch>=2.24.0",
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
]
mlx = [
    "mlx-whisper>=0.4.0",
    "mlx>=0.5.0",
    "open-clip-torch>=2.24.0",
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
]
cpu = [
    "openai-whisper>=20231117",
    "open-clip-torch>=2.24.0",
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
]
qwen = [
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "qwen-vl-utils>=0.0.8",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polybos_engine"]

[tool.ruff]
target-version = "py312"
line-length = 320  # Effectively disabled, Black handles line length

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
